docs/api/qiskit/0.25/qiskit.aqua.operators.state_fns.CVaRMeasurement.md
# qiskit.aqua.operators.state\_fns.CVaRMeasurement[¶](#qiskit-aqua-operators-state-fns-cvarmeasurement "Permalink to this headline")

<span id="undefined" />

`CVaRMeasurement(primitive=None, alpha=1.0, coeff=1.0)`

**A specialized measurement class to compute CVaR expectation values.**

See [https://arxiv.org/pdf/1907.04769.pdf](https://arxiv.org/pdf/1907.04769.pdf) for further details.

Used in `CVaRExpectation`, see there for more details.

**Parameters**

*   **primitive** (`Optional`\[`OperatorBase`]) – The `OperatorBase` which defines the diagonal operator measurement.
*   **coeff** (`Union`\[`int`, `float`, `complex`, `ParameterExpression`]) – A coefficient by which to multiply the state function
*   **alpha** (`float`) – A real-valued parameter between 0 and 1 which specifies the fraction of observed samples to include when computing the objective value. alpha = 1 corresponds to a standard observable expectation value. alpha = 0 corresponds to only using the single sample with the lowest energy. alpha = 0.5 corresponds to ranking each observation by lowest energy and using the best

**Raises**

*   **ValueError** – TODO remove that this raises an error
*   **ValueError** – If alpha is not in \[0, 1].
*   [**AquaError**](qiskit.aqua.AquaError#qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If the primitive is not diagonal.

<span id="undefined" />

`__init__(primitive=None, alpha=1.0, coeff=1.0)`

**Parameters**

*   **primitive** (`Optional`\[`OperatorBase`]) – The `OperatorBase` which defines the diagonal operator measurement.
*   **coeff** (`Union`\[`int`, `float`, `complex`, `ParameterExpression`]) – A coefficient by which to multiply the state function
*   **alpha** (`float`) – A real-valued parameter between 0 and 1 which specifies the fraction of observed samples to include when computing the objective value. alpha = 1 corresponds to a standard observable expectation value. alpha = 0 corresponds to only using the single sample with the lowest energy. alpha = 0.5 corresponds to ranking each observation by lowest energy and using the best

**Raises**

*   **ValueError** – TODO remove that this raises an error
*   **ValueError** – If alpha is not in \[0, 1].
*   [**AquaError**](qiskit.aqua.AquaError#qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If the primitive is not diagonal.

## Methods

|                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.__init__ "qiskit.aqua.operators.state_fns.CVaRMeasurement.__init__")(\[primitive, alpha, coeff])                                                             | **type primitive**`Optional`\[`OperatorBase`]                                                                                                                                                                                                  |
| [`add`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.add "qiskit.aqua.operators.state_fns.CVaRMeasurement.add")(other)                                                                                                 | Return Operator addition of self and other, overloaded by `+`.                                                                                                                                                                                 |
| [`adjoint`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.adjoint "qiskit.aqua.operators.state_fns.CVaRMeasurement.adjoint")()                                                                                          | The adjoint of a CVaRMeasurement is not defined.                                                                                                                                                                                               |
| [`assign_parameters`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.assign_parameters "qiskit.aqua.operators.state_fns.CVaRMeasurement.assign_parameters")(param\_dict)                                                 | Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another.                                                                                                   |
| [`bind_parameters`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.bind_parameters "qiskit.aqua.operators.state_fns.CVaRMeasurement.bind_parameters")(param\_dict)                                                       | Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).                                                                                              |
| [`compose`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.compose "qiskit.aqua.operators.state_fns.CVaRMeasurement.compose")(other\[, permutation, front])                                                              | Composition (Linear algebra-style: A\@B(x) = A(B(x))) is not well defined for states in the binary function model, but is well defined for measurements.                                                                                       |
| [`compute_cvar`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.compute_cvar "qiskit.aqua.operators.state_fns.CVaRMeasurement.compute_cvar")(energies, probabilities)                                                    | Given the energies of each sampled measurement outcome (H\_i) as well as the sampling probability of each measurement outcome (p\_i, we can compute the CVaR.                                                                                  |
| [`equals`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.equals "qiskit.aqua.operators.state_fns.CVaRMeasurement.equals")(other)                                                                                        | Evaluate Equality between Operators, overloaded by `==`.                                                                                                                                                                                       |
| [`eval`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.eval "qiskit.aqua.operators.state_fns.CVaRMeasurement.eval")(\[front])                                                                                           | Given the energies of each sampled measurement outcome (H\_i) as well as the sampling probability of each measurement outcome (p\_i, we can compute the CVaR as H\_j + 1/α\*(sum\_i\<j p\_i\*(H\_i - H\_j)).                                   |
| [`eval_variance`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.eval_variance "qiskit.aqua.operators.state_fns.CVaRMeasurement.eval_variance")(\[front])                                                                | Given the energies of each sampled measurement outcome (H\_i) as well as the sampling probability of each measurement outcome (p\_i, we can compute the variance of the CVaR estimator as H\_j^2 + 1/α \* (sum\_i\<j p\_i\*(H\_i^2 - H\_j^2)). |
| [`get_outcome_energies_probabilities`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.get_outcome_energies_probabilities "qiskit.aqua.operators.state_fns.CVaRMeasurement.get_outcome_energies_probabilities")(\[front]) | In order to compute the CVaR of an observable expectation, we require the energies of each sampled measurement outcome as well as the sampling probability of each measurement outcome.                                                        |
| [`mul`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.mul "qiskit.aqua.operators.state_fns.CVaRMeasurement.mul")(scalar)                                                                                                | Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).                                                                  |
| [`neg`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.neg "qiskit.aqua.operators.state_fns.CVaRMeasurement.neg")()                                                                                                      | Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.                                                                                                                                                       |
| [`permute`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.permute "qiskit.aqua.operators.state_fns.CVaRMeasurement.permute")(permutation)                                                                               | Permute the qubits of the state function.                                                                                                                                                                                                      |
| [`power`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.power "qiskit.aqua.operators.state_fns.CVaRMeasurement.power")(exponent)                                                                                        | Compose with Self Multiple Times, undefined for StateFns.                                                                                                                                                                                      |
| [`primitive_strings`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.primitive_strings "qiskit.aqua.operators.state_fns.CVaRMeasurement.primitive_strings")()                                                            | Return a set of strings describing the primitives contained in the Operator.                                                                                                                                                                   |
| [`reduce`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.reduce "qiskit.aqua.operators.state_fns.CVaRMeasurement.reduce")()                                                                                             | Try collapsing the Operator structure, usually after some type of conversion, e.g.                                                                                                                                                             |
| [`sample`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.sample "qiskit.aqua.operators.state_fns.CVaRMeasurement.sample")(\[shots, massive, reverse\_endianness])                                                       | Sample the state function as a normalized probability distribution.                                                                                                                                                                            |
| [`tensor`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.tensor "qiskit.aqua.operators.state_fns.CVaRMeasurement.tensor")(other)                                                                                        | Return tensor product between self and other, overloaded by `^`.                                                                                                                                                                               |
| [`tensorpower`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.tensorpower "qiskit.aqua.operators.state_fns.CVaRMeasurement.tensorpower")(other)                                                                         | Return tensor product with self multiple times, overloaded by `^`.                                                                                                                                                                             |
| [`to_circuit_op`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.to_circuit_op "qiskit.aqua.operators.state_fns.CVaRMeasurement.to_circuit_op")()                                                                        | Not defined.                                                                                                                                                                                                                                   |
| [`to_density_matrix`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.to_density_matrix "qiskit.aqua.operators.state_fns.CVaRMeasurement.to_density_matrix")(\[massive])                                                  | Not defined.                                                                                                                                                                                                                                   |
| [`to_legacy_op`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.to_legacy_op "qiskit.aqua.operators.state_fns.CVaRMeasurement.to_legacy_op")(\[massive])                                                                 | Attempt to return the Legacy Operator representation of the Operator.                                                                                                                                                                          |
| [`to_matrix`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.to_matrix "qiskit.aqua.operators.state_fns.CVaRMeasurement.to_matrix")(\[massive])                                                                          | Not defined.                                                                                                                                                                                                                                   |
| [`to_matrix_op`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.to_matrix_op "qiskit.aqua.operators.state_fns.CVaRMeasurement.to_matrix_op")(\[massive])                                                                 | Not defined.                                                                                                                                                                                                                                   |
| [`traverse`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.traverse "qiskit.aqua.operators.state_fns.CVaRMeasurement.traverse")(convert\_fn\[, coeff])                                                                  | Apply the convert\_fn to the internal primitive if the primitive is an Operator (as in the case of `OperatorStateFn`).                                                                                                                         |

## Attributes

|                                                                                                                                                      |                                                                            |
| ---------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------- |
| `ENABLE_DEPRECATION`                                                                                                                                 |                                                                            |
| `INDENTATION`                                                                                                                                        |                                                                            |
| [`alpha`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.alpha "qiskit.aqua.operators.state_fns.CVaRMeasurement.alpha")                            | A real-valued parameter between 0 and 1 which specifies the                |
| [`coeff`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.coeff "qiskit.aqua.operators.state_fns.CVaRMeasurement.coeff")                            | A coefficient by which the state function is multiplied.                   |
| [`is_measurement`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.is_measurement "qiskit.aqua.operators.state_fns.CVaRMeasurement.is_measurement") | Whether the StateFn object is a measurement Operator.                      |
| [`num_qubits`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.num_qubits "qiskit.aqua.operators.state_fns.CVaRMeasurement.num_qubits")             | The number of qubits over which the Operator is defined.                   |
| [`parameters`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.parameters "qiskit.aqua.operators.state_fns.CVaRMeasurement.parameters")             | Return a set of Parameter objects contained in the Operator.               |
| [`primitive`](#qiskit.aqua.operators.state_fns.CVaRMeasurement.primitive "qiskit.aqua.operators.state_fns.CVaRMeasurement.primitive")                | The primitive which defines the behavior of the underlying State function. |

<span id="undefined" />

`add(other)`

Return Operator addition of self and other, overloaded by `+`.

**Parameters**

**other** (`OperatorBase`) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to the sum of self and other.

<span id="undefined" />

`adjoint()`

The adjoint of a CVaRMeasurement is not defined.

**Return type**

`OperatorBase`

**Returns**

Does not return anything, raises an error.

**Raises**

[**AquaError**](qiskit.aqua.AquaError#qiskit.aqua.AquaError "qiskit.aqua.AquaError") – The adjoint of a CVaRMeasurement is not defined.

<span id="undefined" />

`property alpha`

**A real-valued parameter between 0 and 1 which specifies the**

fraction of observed samples to include when computing the objective value. alpha = 1 corresponds to a standard observable expectation value. alpha = 0 corresponds to only using the single sample with the lowest energy. alpha = 0.5 corresponds to ranking each observation by lowest energy and using the best half.

**Return type**

`float`

**Returns**

The parameter alpha which was given at initialization

<span id="undefined" />

`assign_parameters(param_dict)`

Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

**Parameters**

**param\_dict** (`dict`) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

**Return type**

`OperatorBase`

**Returns**

The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.

<span id="undefined" />

`bind_parameters(param_dict)`

Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

**Return type**

`OperatorBase`

<span id="undefined" />

`property coeff`

A coefficient by which the state function is multiplied.

**Return type**

`Union`\[`int`, `float`, `complex`, `ParameterExpression`]

<span id="undefined" />

`compose(other, permutation=None, front=False)`

Composition (Linear algebra-style: A\@B(x) = A(B(x))) is not well defined for states in the binary function model, but is well defined for measurements.

**Parameters**

*   **other** (`OperatorBase`) – The Operator to compose with self.
*   **permutation** (`Optional`\[`List`\[`int`]]) – `List[int]` which defines permutation on other operator.
*   **front** (`bool`) – If front==True, return `other.compose(self)`.

**Return type**

`OperatorBase`

**Returns**

An Operator equivalent to the function composition of self and other.

**Raises**

**ValueError** – If self is not a measurement, it cannot be composed from the right.

<span id="undefined" />

`compute_cvar(energies, probabilities)`

Given the energies of each sampled measurement outcome (H\_i) as well as the sampling probability of each measurement outcome (p\_i, we can compute the CVaR. Note that the sampling probabilities serve as an alternative to knowing the counts of each observation and that the input energies are assumed to be sorted in increasing order.

Consider the outcome with index j, such that only some of the samples with measurement outcome j will be used in computing CVaR. The CVaR calculation can then be separated into two parts. First we sum each of the energies for outcomes i \< j, weighted by the probability of observing that outcome (i.e the normalized counts). Second, we add the energy for outcome j, weighted by the difference (α - sum\_i\<j p\_i)

**Parameters**

*   **energies** (`list`) – A list containing the energies (H\_i) of each sample measurement outcome, sorted in increasing order.
*   **probabilities** (`list`) – The sampling probabilities (p\_i) for each corresponding measurement outcome.

**Return type**

`Union`\[`float`, `complex`]

**Returns**

**The CVaR of the diagonal observable specified by self.primitive and**

the sampled quantum state described by the inputs (energies, probabilities). For index j (described above), the CVaR is computed as H\_j + 1/α \* (sum\_i\<j p\_i\*(H\_i - H\_j))

**Raises**

**ValueError** – front isn’t a DictStateFn or VectorStateFn

<span id="undefined" />

`equals(other)`

Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

**Parameters**

**other** (`OperatorBase`) – The `OperatorBase` to compare to self.

**Return type**

`bool`

**Returns**

A bool equal to the equality of self and other.

<span id="undefined" />

`eval(front=None)`

Given the energies of each sampled measurement outcome (H\_i) as well as the sampling probability of each measurement outcome (p\_i, we can compute the CVaR as H\_j + 1/α\*(sum\_i\<j p\_i\*(H\_i - H\_j)). Note that index j corresponds to the measurement outcome such that only some of the samples with measurement outcome j will be used in computing CVaR. Note also that the sampling probabilities serve as an alternative to knowing the counts of each observation.

This computation is broken up into two subroutines. One which evaluates each measurement outcome and determines the sampling probabilities of each. And one which carries out the above calculation. The computation is split up this way to enable a straightforward calculation of the variance of this estimator.

**Parameters**

**front** (`Union`\[`str`, `dict`, `ndarray`, `OperatorBase`, `None`]) – A StateFn or primitive which specifies the results of evaluating a quantum state.

**Return type**

`Union`\[`float`, `complex`]

**Returns**

**The CVaR of the diagonal observable specified by self.primitive and**

the sampled quantum state described by the inputs (energies, probabilities). For index j (described above), the CVaR is computed as H\_j + 1/α\*(sum\_i\<j p\_i\*(H\_i - H\_j))

<span id="undefined" />

`eval_variance(front=None)`

Given the energies of each sampled measurement outcome (H\_i) as well as the sampling probability of each measurement outcome (p\_i, we can compute the variance of the CVaR estimator as H\_j^2 + 1/α \* (sum\_i\<j p\_i\*(H\_i^2 - H\_j^2)). This follows from the definition that Var\[X] = E\[X^2] - E\[X]^2. In this case, X = E\[\<bi|H|bi>], where H is the diagonal observable and bi corresponds to measurement outcome i. Given this, E\[X^2] = E\[\<bi|H|bi>^2]

**Parameters**

**front** (`Union`\[`str`, `dict`, `ndarray`, `OperatorBase`, `None`]) – A StateFn or primitive which specifies the results of evaluating a quantum state.

**Return type**

`Union`\[`float`, `complex`]

**Returns**

**The Var\[CVaR] of the diagonal observable specified by self.primitive**

and the sampled quantum state described by the inputs (energies, probabilities). For index j (described above), the CVaR is computed as H\_j^2 + 1/α\*(sum\_i\<j p\_i\*(H\_i^2 - H\_j^2))

<span id="undefined" />

`get_outcome_energies_probabilities(front=None)`

In order to compute the CVaR of an observable expectation, we require the energies of each sampled measurement outcome as well as the sampling probability of each measurement outcome. Note that the counts for each measurement outcome will also suffice (and this is often how the CVaR is presented).

**Parameters**

**front** (`Union`\[`str`, `dict`, `ndarray`, `OperatorBase`, `None`]) – A StateFn or a primitive which defines a StateFn. This input holds the results of a sampled/simulated circuit.

**Return type**

`Tuple`\[`list`, `list`]

**Returns**

**Two lists of equal length. energies contains the energy of each**

unique measurement outcome computed against the diagonal observable stored in self.primitive. probabilities contains the corresponding sampling probability for each measurement outcome in energies.

**Raises**

**ValueError** – front isn’t a DictStateFn or VectorStateFn

<span id="undefined" />

`property is_measurement`

Whether the StateFn object is a measurement Operator.

**Return type**

`bool`

<span id="undefined" />

`mul(scalar)`

Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

**Parameters**

**scalar** (`Union`\[`int`, `float`, `complex`, `ParameterExpression`]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to product of self and scalar.

<span id="undefined" />

`neg()`

Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to the negation of self.

<span id="undefined" />

`property num_qubits`

The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

**Return type**

`int`

**Returns**

The number of qubits accepted by the Operator’s underlying function.

<span id="undefined" />

`property parameters`

Return a set of Parameter objects contained in the Operator.

<span id="undefined" />

`permute(permutation)`

Permute the qubits of the state function.

**Parameters**

**permutation** (`List`\[`int`]) – A list defining where each qubit should be permuted. The qubit at index j of the circuit should be permuted to position permutation\[j].

**Return type**

`OperatorStateFn`

**Returns**

A new StateFn containing the permuted primitive.

<span id="undefined" />

`power(exponent)`

Compose with Self Multiple Times, undefined for StateFns.

**Parameters**

**exponent** (`int`) – The number of times to compose self with self.

**Raises**

**ValueError** – This function is not defined for StateFns.

**Return type**

`OperatorBase`

<span id="undefined" />

`property primitive`

The primitive which defines the behavior of the underlying State function.

<span id="undefined" />

`primitive_strings()`

Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

**Return type**

`Set`\[`str`]

**Returns**

A set of strings describing the primitives contained within the Operator.

<span id="undefined" />

`reduce()`

Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

**Return type**

`OperatorBase`

**Returns**

The reduced `OperatorBase`.

<span id="undefined" />

`sample(shots=1024, massive=False, reverse_endianness=False)`

Sample the state function as a normalized probability distribution. Returns dict of bitstrings in order of probability, with values being probability.

**Parameters**

*   **shots** (`int`) – The number of samples to take to approximate the State function.
*   **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.
*   **reverse\_endianness** (`bool`) – Whether to reverse the endianness of the bitstrings in the return dict to match Terra’s big-endianness.

**Return type**

`dict`

**Returns**

A dict containing pairs sampled strings from the State function and sampling frequency divided by shots.

<span id="undefined" />

`tensor(other)`

Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, Plus.tensor(Zero) produces a |+⟩ on qubit 0 and a |0⟩ on qubit 1, or |+⟩⨂|0⟩, but would produce a QuantumCircuit like

> |0⟩– |+⟩–

Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

**Parameters**

**other** (`OperatorBase`) – The `OperatorBase` to tensor product with self.

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to the tensor product of self and other.

<span id="undefined" />

`tensorpower(other)`

Return tensor product with self multiple times, overloaded by `^`.

**Parameters**

**other** (`int`) – The int number of times to tensor product self with itself via `tensorpower`.

**Return type**

`Union`\[`OperatorBase`, `int`]

**Returns**

An `OperatorBase` equivalent to the tensorpower of self by other.

<span id="undefined" />

`to_circuit_op()`

Not defined.

**Return type**

`OperatorBase`

<span id="undefined" />

`to_density_matrix(massive=False)`

Not defined.

**Return type**

`ndarray`

<span id="undefined" />

`to_legacy_op(massive=False)`

Attempt to return the Legacy Operator representation of the Operator. If self is a `SummedOp` of `PauliOps`, will attempt to convert to `WeightedPauliOperator`, and otherwise will simply convert to `MatrixOp` and then to `MatrixOperator`. The Legacy Operators cannot represent `StateFns` or proper `ListOps` (meaning not one of the `ListOp` subclasses), so an error will be thrown if this method is called on such an Operator. Also, Legacy Operators cannot represent unbound Parameter coeffs, so an error will be thrown if any are present in self.

Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

**Return type**

`LegacyBaseOperator`

**Returns**

The `LegacyBaseOperator` representing this Operator.

**Raises**

**TypeError** – self is an Operator which cannot be represented by a `LegacyBaseOperator`, such as `StateFn`, proper (non-subclass) `ListOp`, or an Operator with an unbound coeff Parameter.

<span id="undefined" />

`to_matrix(massive=False)`

Not defined.

**Return type**

`ndarray`

<span id="undefined" />

`to_matrix_op(massive=False)`

Not defined.

**Return type**

`OperatorBase`

<span id="undefined" />

`traverse(convert_fn, coeff=None)`

Apply the convert\_fn to the internal primitive if the primitive is an Operator (as in the case of `OperatorStateFn`). Otherwise do nothing. Used by converters.

**Parameters**

*   **convert\_fn** (`Callable`) – The function to apply to the internal OperatorBase.
*   **coeff** (`Union`\[`int`, `float`, `complex`, `ParameterExpression`, `None`]) – A coefficient to multiply by after applying convert\_fn. If it is None, self.coeff is used instead.

**Return type**

`OperatorBase`

**Returns**

The converted StateFn.
